feat: Database name, password 환경변수로 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=kotlin_crud
-spring.datasource.url=mariadb://192.168.0.50:3306/crud
-spring.datasource.username=unit
-spring.datasource.password=unit1234
+spring.datasource.url=jdbc:mariadb://192.168.0.50:3306/crud
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
